--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "github.com/shimaore/node-opensips.git"
+    "url": "https://github.com/shimaore/node-opensips.git"
   },
   "keywords": [
     "OpenSIPS"
@@ -21,14 +21,14 @@
     "url": "https://github.com/shimaore/node-opensips/issues"
   },
   "devDependencies": {
-    "vows": "~0.7.0",
-    "should": "~2.0.2"
+    "vows": "^0.8.1",
+    "should": "^7.1.1"
   },
   "homepage": "https://github.com/shimaore/node-opensips",
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "bluebird": "^2.6.2"
+    "bluebird": "^3.0.5"
   }
 }
