--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "readme": "egrep -v '^    ' < index.coffee.md > README.md",
     "prepublish": "coffee -c index.coffee.md mi.coffee.md",
-    "test": "vows test/* --spec"
+    "test": "coffee test/base.coffee.md"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,9 @@
     "url": "https://github.com/shimaore/node-opensips/issues"
   },
   "devDependencies": {
-    "vows": "^0.8.1",
-    "should": "^7.1.1"
+    "coffee-script": "^1.10.0",
+    "should": "^7.1.1",
+    "vows": "^0.8.1"
   },
   "homepage": "https://github.com/shimaore/node-opensips",
   "directories": {
