Corrected vows tests.
Need to migrate to mocha, really.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "readme": "egrep -v '^    ' < index.coffee.md > README.md",
     "prepublish": "coffee -c index.coffee.md mi.coffee.md",
+    "pretest": "npm install",
     "test": "coffee test/base.coffee.md"
   },
   "repository": {
